ToDo CRUD implemented

--- a/frontend/to-do-client/src/app/tabs/tabs.page.html
+++ b/frontend/to-do-client/src/app/tabs/tabs.page.html
@@ -1,15 +1,14 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-   
     <ion-tab-button tab="to-do-list">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>To Do List</ion-label>
+      <ion-icon name="create"></ion-icon>
+      <ion-label>ToDo List</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="new-to-do">
       <ion-icon name="add"></ion-icon>
-      <ion-label>New</ion-label>
+      <ion-label>New ToDo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
