--- a/frontend/to-do-client/src/app/edit-to-do/edit-to-do.page.html
+++ b/frontend/to-do-client/src/app/edit-to-do/edit-to-do.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-to-do</ion-title>
+    <ion-title>edit-to-do</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -9,22 +9,22 @@
     <ion-row>
       <ion-col size-md="6" size="12">
   <ion-card style="align-content: center"  >
-    <ion-card-header><ion-card-title>I have to...</ion-card-title></ion-card-header>
+    <ion-card-header><ion-card-title>Edit</ion-card-title></ion-card-header>
     <ion-card-content>
       <ion-item>
       <ion-label position="floating">What to do?</ion-label>
-      <ion-input  [(ngModel)]="todo.title"></ion-input>
+      <ion-input  [(ngModel)]="item.title"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Description</ion-label>
-      <ion-input [(ngModel)]="todo.description"></ion-input>
+      <ion-input [(ngModel)]="item.description"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Where to do?</ion-label>
       <!-- <ion-input [(ngModel)]="todo.coordinates"></ion-input> -->
     </ion-item>
 
-          <ion-button id="btn-add-todo" size="large" expand="block" (click)="saveToDo();">Add!</ion-button>
+          <ion-button id="btn-add-todo" size="large" expand="block" (click)="editToDo();">Save</ion-button>
     </ion-card-content>
   </ion-card>
   </ion-col>
