--- a/frontend/to-do-client/src/app/register/register.page.html
+++ b/frontend/to-do-client/src/app/register/register.page.html
@@ -26,7 +26,7 @@
     </ion-item>
    <ion-item>
               <ion-label position="floating">Confirm password</ion-label>
-              <ion-input type="password" [(ngModel)]="registerUser.confirm-password"></ion-input>
+              <ion-input type="password" [(ngModel)]="registerUser.confirmPassword"></ion-input>
             </ion-item>
 
           <ion-button id="btn-register" size="large" expand="block" (click)="register();">Sign Up</ion-button>
