--- a/frontend/to-do-client/src/app/app.component.html
+++ b/frontend/to-do-client/src/app/app.component.html
@@ -1,3 +1,11 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+  <here-map
+    #map
+    appid=""
+    appcode=""
+    zoom="10"
+    lat="47.6"
+    lng="-122">
+</here-map>
 </ion-app>
