--- a/frontend/to-do-client/src/app/tabs/tabs.page.html
+++ b/frontend/to-do-client/src/app/tabs/tabs.page.html
@@ -6,9 +6,9 @@
       <ion-label>ToDo List</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="new-to-do">
-      <ion-icon name="add"></ion-icon>
-      <ion-label>New ToDo</ion-label>
+    <ion-tab-button tab="contact">
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Map</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
