--- a/frontend/to-do-client/src/app/profile/profile.page.html
+++ b/frontend/to-do-client/src/app/profile/profile.page.html
@@ -5,5 +5,14 @@
 </ion-header>
 
 <ion-content>
+    <ion-item>
+  <ion-label position = "floating" class="label">Name</ion-label>
+  <!-- <ion-input [(ngModel)]="profile.name"></ion-input> -->
+ <ion-input></ion-input>
+    </ion-item>
+<ion-button>Update</ion-button>
 
+
+<ion-button>Quit
+  <ion-icon slot="end" name="exit"></ion-icon></ion-button>
 </ion-content>
