--- a/frontend/to-do-client/src/app/profile/profile.page.html
+++ b/frontend/to-do-client/src/app/profile/profile.page.html
@@ -15,4 +15,25 @@
 
 <ion-button>Quit
   <ion-icon slot="end" name="exit"></ion-icon></ion-button>
+
+
+  <ion-label position = "floating" class="label">SqliteTest</ion-label>
+
+
+  <table>
+    <tr>
+        <td>title||</td>
+        <td>isSynced||</td>
+        <td>action||</td>
+        <td>isDisplayable||</td>
+    </tr>
+<tr *ngFor="let item of items">
+<td>{{item.title}}</td>
+<td>{{item.isSynced}}</td>
+<td>{{item.action}}</td>
+<td>{{item.isDisplayable}}</td>
+</tr>
+
+  </table>
+
 </ion-content>
