google login added, 'remember me' fixed

--- a/frontend/to-do-client/src/app/app.component.html
+++ b/frontend/to-do-client/src/app/app.component.html
@@ -1,11 +1,5 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <here-map
-    #map
-    appid=""
-    appcode=""
-    zoom="10"
-    lat="47.6"
-    lng="-122">
-</here-map>
+  <here-map #map appid="" appcode="" zoom="10" lat="47.6" lng="-122">
+  </here-map>
 </ion-app>
